@@ -1,0 +1,12 @@
+# $NetBSD: xfree.expat,v 1.1 2004/02/17 08:26:25 jlam Exp $
+#
+include/expat.h
+lib/libexpat.a
+lib/libexpat.so
+lib/libexpat.so.1
+lib/libexpat.so.1.0
+lib/libexpat.so.4
+lib/libexpat.so.4.0
+lib/libexpat.dylib
+lib/libexpat.1.dylib
+lib/libexpat.1.0.dylib
